tdf#104710 bRemove: only prevent w/BREAK_TYPE for defined Sections

fixes regression from fix for bug 103975 which prevented removal of
empty paragraphs if there was a page/column break.  This patch adds
the requirement that there is also a defined SectionBreak.

I did a bad thing with unit test rhbz988516 (which was re-used as
the unit test for bug 103975). I didn't first check in MSWord
to see how many pages it really ought to have, and when it started
round-tripping with 3 pages I was happy.  Well, the proper page count
according to MSO is 2 (a hard page/break and Section/newPage combine
to form a single pagebreak). Undoing the regression fixes that too.

The regression was commit 7b250d56981f78e77454a2a3fd670731b2358e75

Change-Id: I15e9df2d260954f02a9e183d9f48c1d267494b49
Reviewed-on: https://gerrit.libreoffice.org/32236
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit e37563c304e52f1d2385868c9b33e0145493d2bd)
Reviewed-on: https://gerrit.libreoffice.org/32328