writerfilter/source/dmapper/PropertyMap.hxx
@@ -312,6 +312,8 @@ public:
     void SetPageNumber( sal_Int32 nSet ) { m_nPageNumber = nSet; }
     void SetPageNumberType(sal_Int32 nSet) { m_nPageNumberType = nSet; }
     void SetBreakType( sal_Int32 nSet ) { m_nBreakType = nSet; }
+    // GetBreakType returns -1 if the breakType has not yet been identified for the section
+    sal_Int32 GetBreakType() { return m_nBreakType; }
 
     void SetLeftMargin(    sal_Int32 nSet ) { m_nLeftMargin = nSet; }
     sal_Int32 GetLeftMargin() { return m_nLeftMargin; }
